# FFT

./: CMakeLists.txt  README
include/: convolution.hpp  dft.hpp  fft.hpp  matrix.hpp
test/: convolution.cpp  dft.cpp  equality_checks.hpp  fft.cpp  generator.hpp
